added globalVar(SHA) and CLOUDSDK_CORE_DISABLE_PROMPTS=1

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 sudo: required
 services:
   - docker
+env:
+  global:
+    - SHA=$(git rev-parse HEAD)
+    - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 before_install:
   - openssl aes-256-cbc -K $encrypted_9f3b5599b056_key -iv $encrypted_9f3b5599b056_iv -in service-account.json.enc -out service-account.json -d
   # command that will download google SDK 
@@ -11,6 +15,20 @@ before_install:
   - gcloud components update kubectl
   # we will create service-account.json file(soon) and will put our credentials to allow travis acccess to our gcloud
   - gcloud auth activate-service-account --key-file service-account.json
+  # projectName / locationZone / clusterName
   - gcloud config set project multi-k8s-347708
   - gcloud config set compute/zone europe-central2-a
   - gcloud container clusters get-credentials multi-cluster
+  # Login to Docker CLI
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  # Build 'test' version of multi-client  Dockerfile.dev
+  - docker build -t darkoohrid/react-test -f ./client/Dockerfile.dev ./client
+
+  script:
+    - docker run -e CI=true darkoohrid/react-test npm test
+
+  deploy:
+    provider: script
+    script: bash ./deploy.sh
+    on:
+      branch: master
